@@ -95,6 +95,22 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hive
+operator|.
+name|conf
+operator|.
+name|HiveConf
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|util
 operator|.
 name|ReflectionUtils
@@ -334,10 +350,119 @@ block|}
 block|}
 else|else
 block|{
-comment|// ERROR
+comment|// try default stats publisher/aggregator
+name|String
+name|defPublisher
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_STATS_DEFAULT_PUBLISHER
+argument_list|)
+decl_stmt|;
+name|String
+name|defAggregator
+init|=
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|conf
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVE_STATS_DEFAULT_AGGREGATOR
+argument_list|)
+decl_stmt|;
+comment|// ERROR no default publisher/aggregator is defined
+if|if
+condition|(
+name|defPublisher
+operator|==
+literal|null
+operator|||
+name|defAggregator
+operator|==
+literal|null
+condition|)
+block|{
 return|return
 literal|false
 return|;
+block|}
+try|try
+block|{
+name|publisherImplementation
+operator|=
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Serializable
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|defPublisher
+argument_list|,
+literal|true
+argument_list|,
+name|classLoader
+argument_list|)
+expr_stmt|;
+name|aggregatorImplementation
+operator|=
+operator|(
+name|Class
+argument_list|<
+name|?
+extends|extends
+name|Serializable
+argument_list|>
+operator|)
+name|Class
+operator|.
+name|forName
+argument_list|(
+name|defAggregator
+argument_list|,
+literal|true
+argument_list|,
+name|classLoader
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ClassNotFoundException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"JDBC Publisher/Aggregator classes cannot be loaded."
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
 block|}
 name|jobConf
 operator|=
