@@ -149,6 +149,9 @@ Trunk -  Unreleased
     HIVE-1862 Revive partition filtering in the Hive MetaStore
     (Mac Yang via pauly)
 
+    HIVE-1923 Allow any type of stats publisher and aggregator in addition to
+    HBase and JDBC (Ning Zhang via namit)
+
   IMPROVEMENTS
 
     HIVE-1692. FetchOperator.getInputFormatFromCache hides causal exception (Philip Zeyliger via cws)
